@@ -1870,14 +1870,17 @@ name|IOException
 name|ioe
 parameter_list|)
 block|{
+throw|throw
+name|ioe
+throw|;
+block|}
+finally|finally
+block|{
 name|image
 operator|.
 name|close
 argument_list|()
 expr_stmt|;
-throw|throw
-name|ioe
-throw|;
 block|}
 return|return
 literal|0
